Routing-traffics-awsLoadBalancer-Controller/03.ACM-cert-on-ALB/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
  namespace: wordpress
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
  selector:
    app: wordpress
